data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4454.wast
;; 3. **Test Description:** Implement testing where `call_indirect` uses an empty table to verify the handling of invoking functions from an empty table leading to traps.    - **Constraint:** Ensures proper bounds checking on an empty table.    - **Improper Handling Relation:** Lack of bounds checking could lead to invalid memory access or undefined behavior.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 0 funcref)
    (func (call_indirect (type 0) (i32.const 0)))
  )
  "table index out of bounds"
)